# claude-agent-team-manager

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
docs/: remote-access-architecture.md  remote-access-critique.md
relay/: Cargo.toml  Dockerfile  README.md  relay-config.toml
relay/deploy/: Caddyfile  atm-relay.service
relay/src/: config.rs  health.rs  main.rs  rate_limit.rs  room.rs  ws.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/remote-ui/: app.js  index.html  manifest.json  styles.css  sw.js
src-tauri/src/: lib.rs
src-tauri/src/remote/: auth.rs  bridge.rs  mod.rs  qr.rs  relay_client.rs  server.rs  state.rs  ws.rs
src/components/remote/: MobileTreeView.tsx  index.ts
src/components/settings/: SettingsPanel.tsx
src/services/: remote-sync.ts
src/store/: tree-store.ts  ui-store.ts
src/types/: remote.ts
