[package]
name = "atm-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.9"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
governor = "0.8"
tower = "0.5"
