[package]
name = "atm"
version = "0.8.1"
description = "ATM — Agent Team Manager for Claude Code"
authors = ["Kevin"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Remote access server
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
local-ip-address = "0.6"
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# Cloud relay client
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
